<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_inicio"
            android:checked="true"
            android:icon="@drawable/inicio"
            android:title="@string/item_inicio" />
        <item
            android:id="@+id/item_search"
            android:icon="@drawable/busqueda"
            android:title="@string/item_search" />
        <item
            android:id="@+id/item_cuenta"
            android:icon="@drawable/movie_grey_72x72"
            android:title="Movies" />
        <item
            android:id="@+id/item_categorias"
            android:icon="@drawable/categorias"
            android:title="Series" />
        <item
            android:id="@+id/item_configuracion"
            android:icon="@drawable/configuracion"
            android:title="@string/item_configuracion" />
        <item
            android:id="@+id/item_contact"
            android:icon="@drawable/locate"
            android:title="@string/item_contact" />
    </group>

</menu>